name:                tansu-berkeleydb
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Getty Ritter
maintainer:          gettylefou@gmail.com
-- copyright:
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Database.Tansu.Backend.BerkeleyDb
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9,
                       bytestring >=0.10 && <0.11,
                       directory >=1.2 && <1.3,
                       tansu,
                       BerkeleyDB
  -- hs-source-dirs:
  default-language:    Haskell2010

executable sample
  main-is: Main.hs
  build-depends: base, tansu, tansu-berkeleydb
  hs-source-dirs: sample
  default-language: Haskell2010
